--- a/Amalthea/mainwindow.ui
+++ b/Amalthea/mainwindow.ui
@@ -14,17 +14,14 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="label">
+   <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>70</y>
-      <width>71</width>
-      <height>21</height>
+      <x>10</x>
+      <y>10</y>
+      <width>301</width>
+      <height>211</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
